Gestion de categorias hecha

--- a/src/gui/VLibro.form
+++ b/src/gui/VLibro.form
@@ -78,7 +78,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="textoTitulo" pref="395" max="32767" attributes="0"/>
+                              <Component id="textoTitulo" pref="430" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -101,12 +101,12 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="textoEditorial" pref="170" max="32767" attributes="0"/>
+                                  <Component id="textoEditorial" pref="210" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="textoId" min="-2" pref="62" max="-2" attributes="0"/>
-                                      <EmptySpace min="0" pref="91" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="126" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -119,7 +119,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="btnNuevoAutor" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="textoNuevoAutor" pref="217" max="32767" attributes="0"/>
+                                      <Component id="textoNuevoAutor" pref="226" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="btnActualizarLibro" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
@@ -291,7 +291,7 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane2" pref="182" max="32767" attributes="1"/>
+                              <Component id="jScrollPane2" pref="214" max="32767" attributes="1"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -312,7 +312,7 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="383" max="32767" attributes="0"/>
+                      <EmptySpace pref="387" max="32767" attributes="0"/>
                       <Component id="btnActualizarCategoriasLibro" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -433,27 +433,33 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane4" alignment="0" pref="475" max="32767" attributes="0"/>
+                  <Component id="jScrollPane4" alignment="0" pref="489" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnNuevoEjemplar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnBorrarEjemplar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="btnPrestamo" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="btnDevolver" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="btnActualizarEjemplaresLibro" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jScrollPane4" pref="267" max="32767" attributes="0"/>
+                      <Component id="jScrollPane4" pref="275" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnNuevoEjemplar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnBorrarEjemplar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnActualizarEjemplaresLibro" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnPrestamo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnDevolver" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
@@ -506,6 +512,16 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnActualizarEjemplaresLibroActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnPrestamo">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Prestamo"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnDevolver">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Devolver"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
